Add Validation Btn

--- a/src/components/styles/CryptoItem.css
+++ b/src/components/styles/CryptoItem.css
@@ -2,7 +2,7 @@
 	width: 200px;
 	height: 190px;
 	list-style-type: none;
-	margin: 30px;
+	margin: 30px 30px 10px;
 	border-radius: 12px;
 	padding: 20px;
 	cursor: pointer;
